profiles to all structs
